[package]
name = "rad"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*"
]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"

tokio = { version = "1.48.0", features = ["full"] }
rad_common = { path = "./crates/rad_common", version = "0.1.0" }
eradic_adaptor = { path = "./crates/eradic_adaptor", version = "0.1.0" }
async-trait = "0.1.89"
