[package]
name = "eradic"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*"
]

[dependencies]
eradic_common = { path = "./crates/eradic_common", version = "0.1.0" }
eradic_ul_tokio = { path = "./crates/eradic_ul_tokio", version = "0.1.0" }

tokio-util = "0.7.18"
tokio = { version = "1.48.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"
