[package]
name = "eradic"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*"
]

[dependencies]
eradic_common = { path = "./crates/eradic_common", version = "0.1.0" }

[dev-dependencies]
eradic_common = { path = "./crates/eradic_common", version = "0.1.0" }
eradic_ul_tokio = { path = "./crates/eradic_ul_tokio", version = "0.1.0" }

tokio-util = "0.7.18"
tokio = { version = "1.48.0", features = ["full"] }

opentelemetry = "0.29"
opentelemetry_sdk = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
tracing = "0.1"
metrics-exporter-prometheus = "0.16"
tracing-loki = "0.2"
metrics = "0.24"
