[package]
name = "eradic_server"
version = "0.1.0"
edition = "2024"

[dependencies]
eradic_common = { path = "../eradic_common", version = "0.1.0" }
eradic_adaptor = { path = "../eradic_adaptor", version = "0.1.0" }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"

tokio = { version = "1.48.0", features = ["full"] }

async-trait = "0.1.89"
