[package]
name = "eradic_ul"
version = "0.1.0"
edition = "2024"

[dependencies]
eradic_common = { path = "../eradic_common", version = "0.1.0" }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"

tokio = { version = "1.48.0", features = ["full"] }

tokio-util = "0.7.18"

thiserror = "2.0.18"
